Fix explorer dark mode issue and restructure scss (#157) (#262)
* dark mode fixes


* restructure scss


* minor line removals


(cherry picked from commit d957074cd7cf68714c0248b54d2d5c9864fbcda5)

--- a/public/components/event_analytics/explorer/visualizations/config_panel/config_panel.scss
+++ b/public/components/event_analytics/explorer/visualizations/config_panel/config_panel.scss
@@ -3,14 +3,6 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
-.lnsConfigPanel__addLayerBtn {
-  color: transparentize($euiColorMediumShade, 0.3);
-  // Remove EuiButton's default shadow to make button more subtle
-  // sass-lint:disable-block no-important
-  box-shadow: none !important;
-  border-color: $euiColorLightShade;
-}
-
 //
 // LAYOUT
 //
@@ -140,7 +132,7 @@ $vis-editor-sidebar-min-width: 350px;
   
   .cp__rightHeader, .cp__rightSettings {
     padding: 8px;
-    background-color: #FFF;
+    background-color: transparent;
   }
 
   .cp__rightHeader {
@@ -195,4 +187,11 @@ $vis-editor-sidebar-min-width: 350px;
 
 .color-theme-combo-box-option .euiFlexItem.euiFlexItem--flexGrowZero {
   display: none;
+}
+
+// dark mode
+.explorer-dark {
+  .panel_section, .cp__rightHeader {
+    border-bottom: 1px solid $border-color-on-dark;
+  }
 }
